# phl-budget-data

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: daily-update-check.yml
src/phl_budget_data/: __init__.py  __main__.py  base.py  clean.py  collections.py  depts.py  qcmr.py  revenue.py  spending.py  utils.py
src/phl_budget_data/cli/: __init__.py  __main__.py  etl.py  scrape.py  utils.py
src/phl_budget_data/cli/etl/: core.py
src/phl_budget_data/cli/update/: __init__.py  core.py  scrape.py
src/phl_budget_data/collections/: __init__.py  base.py
src/phl_budget_data/collections/city/: __init__.py  core.py  govts.py  nontax.py  tax.py
src/phl_budget_data/collections/industry/: sales.py  wage.py
src/phl_budget_data/collections/school/: __init__.py  core.py
src/phl_budget_data/data/etl/interim/: dept-matches.json
src/phl_budget_data/data/historical/qcmr/: cash-reports-fund-balances.csv  cash-reports-spending.csv  department-obligations.csv  fulltime-positions.csv
src/phl_budget_data/data/historical/revenue/: city-collections.csv  city-tax-collections.csv  school-collections.csv  wage-collections-by-sector.csv
src/phl_budget_data/data/historical/spending/: actual-department-spending.csv  budgeted-department-spending-adopted.csv  budgeted-department-spending-proposed.csv
src/phl_budget_data/data/interim/: dept-matches.json
src/phl_budget_data/data/interim/budget-in-brief/adopted/: FY10.xlsx  FY11.xlsx  FY13.xlsx  FY14.xlsx
src/phl_budget_data/data/interim/qcmr/cash/: FY07_Q1-pg-1.csv  (+71 more)
src/phl_budget_data/data/processed/collections/: birt-collections-by-sector.csv  city-collections.csv  city-tax-collections.csv  rtt-collections-by-sector.csv  school-collections.csv  wage-collections-by-sector.csv
src/phl_budget_data/data/processed/qcmr/: cash-reports-fund-balances.csv  cash-reports-net-cash-flow.csv  cash-reports-revenue.csv  cash-reports-spending.csv  department-obligations.csv  fulltime-positions.csv  personal-services-summary.csv
src/phl_budget_data/data/processed/revenue/: city-tax-collections.csv  sales-collections-by-sector.csv  school-collections.csv  wage-collections-by-sector.csv
src/phl_budget_data/data/processed/spending/: actual-department-spending.csv  budgeted-department-spending-adopted.csv  budgeted-department-spending-proposed.csv
src/phl_budget_data/data/sql/: metadata.json  revenue.db  spending.db
src/phl_budget_data/etl/: __init__.py  aws.py  core.py  etl.py
src/phl_budget_data/etl/budget/: __init__.py  summary.py
src/phl_budget_data/etl/budget/data/: dept_names_lookup.xlsx
src/phl_budget_data/etl/collections/: __init__.py  processed.py
src/phl_budget_data/etl/collections/by_industry/: __init__.py  birt.py  sales.py  wage.py
src/phl_budget_data/etl/collections/by_sector/: birt.py  rtt.py  sales.py  wage.py
src/phl_budget_data/etl/collections/monthly/: __init__.py  city.py  city_nontax.py  city_other_govts.py  city_tax.py  core.py  school.py
src/phl_budget_data/etl/qcmr/: __init__.py  base.py  processed.py
src/phl_budget_data/etl/qcmr/cash/: __init__.py  core.py  fund_balances.py  net_cash_flow.py  revenue.py  spending.py
src/phl_budget_data/etl/qcmr/obligations/: __init__.py  core.py
src/phl_budget_data/etl/qcmr/personal_services/: __init__.py  core.py
src/phl_budget_data/etl/qcmr/positions/: __init__.py  core.py
src/phl_budget_data/etl/sentinel/: core.py  scrape.py
src/phl_budget_data/etl/spending/: __init__.py  historical.py  processed.py  summary.py
src/phl_budget_data/etl/utils/: __init__.py  aws.py  depts.py  misc.py  pdf.py  transformations.py
src/phl_budget_data/etl/utils/depts/: __init__.py  core.py  selector.py
src/phl_budget_data/sentinel/: core.py  scrape.py
src/phl_budget_data/utils/: pdf.py  transformations.py
(+1977 files in other folders)
