[tool.poetry]
name = "phl-budget-data"
version = "0.1.7"
description = "PHL Budget Data"
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"
readme = "README.md"
exclude = [ "src/phl_budget_data/data/etl"]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.0.1"
numpy = "^1.20.1"
pandas = "^1.2.1"
openpyxl = "^3.0.7"
rich-click = "^0.3.0"
pydantic = "^1.9.0"
billy-penn = {git = "https://github.com/PhilaController/billy-penn.git", rev = "main"}
loguru = "^0.5.3"
selenium = { version = "^3.141.0", optional = true }
pdfplumber = { version = "^0.5.25", optional = true }
webdriver-manager = { version = "^3.3.0", optional = true }
intervaltree = { version = "^3.1.0", optional = true }
python-dotenv = { version = "0.19.2", optional = true }
boto3 = { version = "^1.17.12", optional = true }
beautifulsoup4 = { version = "^4.9.3", optional = true }
textual = { version = "^0.1.15", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab = "^3.0.5"
matplotlib = "^3.3.4"
jupyterlab_code_formatter = "^1.4.2"
isort = "^5.7.0"

[tool.poetry.extras]
etl = ["selenium", "pdfplumber", "webdriver-manager", "intervaltree", "python-dotenv", "boto3", "beautifulsoup4", "textual"]

[tool.poetry.scripts]
phl-budget-data = "phl_budget_data.cli.__main__:main"


[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
