[tool.poetry]
name = "phl-budget-data"
version = "0.2.1"
description = "PHL Budget Data"
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"
readme = "README.md"
exclude = [ "src/phl_budget_data/data/etl", "src/phl_budget_data/etl", "src/phl_budget_data/cli/etl", "src/phl_budget_data/cli/scrape"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "8.0.1"
numpy = ">=1.20"
pandas = ">=1.2"
openpyxl = "^3.0.7"
rich-click = "^0.3.0"
pydantic = "^1.9.0"
loguru = "^0.5.3"
datasette = "^0.60.2"
sqlite-utils = "^3.24"
billy-penn = "0.1.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab = "^3.0.5"
matplotlib = "^3.3.4"
jupyterlab_code_formatter = "^1.4.2"
isort = "^5.7.0"
selenium = "^3.141.0"
pdfplumber = "0.7.5"
webdriver-manager = "^3.3.0"
intervaltree =  "^3.1.0"
python-dotenv =  "0.19.2"
boto3 = "^1.17.12"
beautifulsoup4 = "^4.9.3"
textual = "^0.1.15"
mypy = "^0.941"

[tool.poetry.scripts]
phl-budget-data = "phl_budget_data.cli.__main__:main"


[tool.poetry.group.dev.dependencies]
pdfminer-six = "20220524"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
